[gd_scene load_steps=7 format=3 uid="uid://11siwvu70ak7"]

[ext_resource type="Script" uid="uid://bpro3bpsmtw05" path="res://Models/Menus/Overlays/quest_menu.gd" id="1_cod0v"]
[ext_resource type="PackedScene" uid="uid://bahbw57ddd7vt" path="res://Scripts/menu_switcher.tscn" id="2_6m2fi"]
[ext_resource type="Script" uid="uid://vggqrpcrq0ai" path="res://Models/Menus/ShopMenus/active_quests.gd" id="4_65ixt"]
[ext_resource type="PackedScene" uid="uid://twvv0wexmurt" path="res://Models/Menus/OptionMenus/options.tscn" id="5_6qcnh"]
[ext_resource type="Script" uid="uid://dfmxwvhcd52h1" path="res://Models/Menus/ShopMenus/completed_quests.gd" id="5_vxv28"]
[ext_resource type="PackedScene" uid="uid://ujhs0mvtimxh" path="res://Models/Menus/ShopMenus/Inventory.tscn" id="5_ysctb"]

[node name="QuestMenu" type="Panel" node_paths=PackedStringArray("active_menu", "completed_menu", "tab_container", "menu_switcher", "desc_box_container")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cod0v")
active_menu = NodePath("TabContainer/Active")
completed_menu = NodePath("TabContainer/Completed")
tab_container = NodePath("TabContainer")
menu_switcher = NodePath("MenuSwitcher")
desc_box_container = NodePath("BoxContainer")

[node name="MenuSwitcher" parent="." node_paths=PackedStringArray("menu_container") instance=ExtResource("2_6m2fi")]
menu_container = NodePath("../TabContainer")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
current_tab = 1
drag_to_rearrange_enabled = true
use_hidden_tabs_for_min_size = true

[node name="Active" parent="TabContainer" node_paths=PackedStringArray("objective_list") instance=ExtResource("5_ysctb")]
visible = false
layout_mode = 2
focus_neighbor_bottom = NodePath("Options")
focus_mode = 2
script = ExtResource("4_65ixt")
objective_list = NodePath("../../ObjectivesList")
metadata/_tab_index = 0

[node name="MarginContainer" parent="TabContainer/Active/Heading" index="0"]
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Q1Label" parent="TabContainer/Active/Heading/MarginContainer/HBoxContainer" index="1"]
visible = false

[node name="Q2label" parent="TabContainer/Active/Heading/MarginContainer/HBoxContainer" index="2"]
visible = false

[node name="Completed" parent="TabContainer" node_paths=PackedStringArray("objective_list") instance=ExtResource("5_ysctb")]
layout_mode = 2
focus_mode = 2
script = ExtResource("5_vxv28")
objective_list = NodePath("../../ObjectivesList")
metadata/_tab_index = 1

[node name="MarginContainer" parent="TabContainer/Completed/Heading" index="0"]
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Q1Label" parent="TabContainer/Completed/Heading/MarginContainer/HBoxContainer" index="1"]
visible = false

[node name="Q2label" parent="TabContainer/Completed/Heading/MarginContainer/HBoxContainer" index="2"]
visible = false

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 368.0
offset_right = 856.0
offset_bottom = 441.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ObjectivesList" parent="." instance=ExtResource("5_6qcnh")]
visible = false
layout_mode = 0
offset_left = 1328.0
offset_top = 540.0
offset_right = 1816.0
offset_bottom = 866.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="visibility_changed" from="TabContainer/Active" to="TabContainer/Active" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="TabContainer/Completed" to="TabContainer/Completed" method="_on_visibility_changed"]

[editable path="TabContainer/Active"]
[editable path="TabContainer/Active/Options"]
[editable path="TabContainer/Completed"]
[editable path="TabContainer/Completed/Options"]
